<resources>

    <string name="app_name">Robot</string>
    <string name="text_map">Map</string>
    <string name="text_task">Task</string>
    <string name="run">\n\nRun</string>
    <string name="stop_run">\n\nStop</string>
    <string name="map">Map</string>
    <string name="task">Task</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <string name="settings_title">Settings</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_ok">Apply</string>
    <string name="settings_electricity_quantity">Recharge Capacity</string>
    <string name="settings_reset_robot">Reset</string>
    <string name="settings_volume">Volume</string>
    <string name="settings_navigation_speed">Robot Navigation Speed:</string>
    <string name="settings_playPathSpeed_speed">Robot Speed</string>
    <string name="settings_led_brightness">LED Brightness</string>
    <string name="settings_version_number">Robot Version Number</string>
    <string name="settings_version_number2">Controller Version Number</string>
    <string name="settings_work_model">Work Model</string>
    <string name="setting_charging_pile">Charging Pile</string>
    <string name="run_all_task">Task</string>
    <string name="run_all_time">Hours</string>
    <string name="run_all_area">M2</string>

    <string name="please_select_map">Please Select Map</string>
    <string name="new_map_name_text">Map Name</string>
    <string name="new_map_name_edit">Please enter new map name</string>
    <string name="new_map_scan">Start</string>
    <string name="new_map_save">Save</string>
    <string name="new_map_back">Back</string>

    <string name="map_manage_add_new_map_btn">New</string>
    <string name="map_manage_name_text">Map</string>
    <string name="map_manage_select_map">Please Select Map</string>
    <string name="map_manage_select_task">Please Select Task</string>
    <string name="map_manage_rename">Rename</string>
    <string name="map_manage_delete">Delete</string>
    <string name="map_manage_edit">Edit</string>
    <string name="map_manage_back">Back</string>

    <string name="edit_map_name_text">Map Name</string>
    <string name="map_edit_charging_btn">Set Charging Point</string>
    <string name="map_edit_virtual_wall">Add Virtual Wall</string>
    <string name="map_exit_edit_virtual_wall">Exit virtual wall editing</string>
    <string name="map_edit_position">Set Task Point</string>
    <string name="map_edit_save">Save Virtual wall</string>
    <string name="map_edit_back">Back</string>
    <string name="selectPoint">SelectPoint</string>
    <string name="task_edit">Please enet task name</string>

    <string name="save_hint">The current task did not save</string>
    <string name="task_name">Task</string>
    <string name="task_deit">Edit</string>
    <string name="task_delete">Delete</string>
    <string name="task_back">Back</string>
    <string name="task_add">Add</string>
    <string name="task_details">Detail</string>
    <string name="task_time">Time</string>
    <string name="run_map">Map Name</string>
    <string name="run_task">Task Name</string>
    <string name="run_stop">Cancel</string>
    <string name="task_type">Type</string>
    <string name="task_piont">Point</string>
    <string name="task_type_select">Task Type</string>
    <string name="task_type_time">Task Time</string>
    <string name="task_type_week">Task Week</string>
    <string name="myConfirm">Confirm</string>
    <string name="myExc">exc</string>
    <string name="delete_Wall">Delete virtual wall?</string>
    <string name="test_back">Back</string>
    <string name="self_test_of_lower_computer">Self Test Of Lower Computer</string>
    <string name="test_voice_and_led">Voice And LED</string>
    <string name="upper_computer_check">Upper computer check</string>
    <string name="test_uvc">UVC</string>
    <string name="test_pir">PIR</string>
    <string name="time_second">Second</string>
    <string name="time_minute">Minute</string>

    <string name="dat_map_manage_dialog_text1">Please enter a new map name:</string>
    <string name="dat_map_manage_dialog_text2">Do you want to delete this map?</string>
    <string name="dialog_new_map_text1">Do you want to start scanning?</string>
    <string name="dialog_new_map_text2">Start scanning</string>
    <string name="dialog_new_map_text3">Do you want to finish the scan and save the map?</string>
    <string name="dialog_new_map_text4">Save Map</string>
    <string name="dialog_new_map_text5">Building map, please wait a moment...</string>
    <string name="dialog_new_map_text6">Do you want to stop the current scan？</string>
    <string name="dialog_new_map_text7">Stop Scan</string>
    <string name="dialog_edit_map_text1"> Please enter the new name of the navigation point:</string>
    <string name="dialog_settings_text1">请为该导航点提供新的名字:</string>


    <string name="dat_map_manage_toast_text1">Map name has been modified successfully!</string>
    <string name="dat_map_manage_toast_text2">The current map name already exists, please enter a new map name!</string>
    <string name="dat_map_manage_toast_text3">The current map name is empty, please enter a new map name!</string>
    <string name="dat_map_manage_toast_text4">Map deleted successfully!</string>
    <string name="toast_new_map_text1">Map name cannot be empty, please input map name!</string>
    <string name="toast_new_map_text2">Start Scan...</string>
    <string name="toast_new_map_text3">The map name you entered already exists, please enter a new map name!</string>
    <string name="toast_edit_map_text1">The name already exists!</string>
    <string name="toast_edit_map_text2">Navigation point renamed successfully!</string>
    <string name="toast_edit_map_text3">Navigation point name cannot be empty!</string>
    <string name="toast_edit_map_text4">Navigation point deleted successfully!</string>
    <string name="toast_edit_map_text5">Navigation point added successfully！</string>
    <string name="toast_edit_map_text6">Please enter the name of the new navigation point：</string>
    <string name="toast_edit_map_text7">Initialization is in progress. Please make sure there are no obstacles around the robot. Please wait a moment...</string>
    <string name="toast_edit_map_text8">Initialization successful！</string>
    <string name="toast_edit_map_error">Initialization failed! Please confirm whether the map and the environment around the robot are normal!</string>
    <string name="toast_edit_map_text9">Charging point added successfully, please wait a moment...</string>
    <string name="toast_edit_map_text10">Please check whether the charging point is connected to the robot!</string>
    <string name="toast_settings_text1">Successful application!</string>
    <string name="toast_settings_text2">Access to the test page</string>
    <string name="toast_mainactivity_text1">Obstacle detected in front of robot!</string>
    <string name="toast_mainactivity_RobotError">The status of the robot is abnormal, please contact the supplier!</string>
    <string name="urgencyStoptitle">WARN</string>
    <string name="urgencyStopmessage">URGENCY STOP</string>



    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>
    <string name="list_remame">rename</string>
    <string name="list_delete">delete</string>
    <string name="count_down">Count Down</string>
    <string name="please_task_name">Please select task</string>
    <string name="Whether_task_delete">Whether to delete the task?</string>
    <string name="please_add_map">Please creat map</string>
    <string name="first_connect1">Network error</string>
    <string name="first_connect2">Please check that the network connection is correct</string>
    <string name="first_connect3">Cancel</string>
    <string name="first_connect4">Reconnection</string>
    <string name="first_connect5">Connect...</string>
    <string name="first_connect6">Waiting...</string>
    <string name="first_connect7">Prompt Message</string>
    <string name="first_connect8">Upgrade the upper computer, please stay connected, after successful upgrade, please click reconnect</string>
    <string name="task1">Please enter task name</string>
    <string name="task2">Task save seccess</string>
    <string name="task3">Task name cannot be repeated</string>
    <string name="week1">Monday</string>
    <string name="week2">Tuesday</string>
    <string name="week3">Wednesday</string>
    <string name="week4">Thursday</string>
    <string name="week5">Friday</string>
    <string name="week6">Saturday</string>
    <string name="week7">Sunday</string>
    <string name="type1">Once</string>
    <string name="type2">Pre Day</string>
    <string name="type3">Pre Week</string>
    <string name="task_edit_save">SAVE</string>
    <string name="task_edit_back">BACK</string>
    <string name="add_wall">Virtual wall save success</string>
    <string name="reset">Whether to delete all data and revert to default Settings!</string>
    <string name="task_edit_no_image">Please first scan map!</string>
</resources>
