<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200px"
    android:layout_height="400px"
    android:background="@drawable/ic_pop_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/details_task_map_text"
        android:layout_width="100px"
        android:layout_height="50px"
        android:text="@string/map"/>
    <TextView
        android:id="@+id/details_task_map"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_toRightOf="@id/details_task_map_text"/>


    <TextView
        android:id="@+id/details_task_task_text"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_map_text"
        android:text="@string/task"/>

    <TextView
        android:id="@+id/details_task_task"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_map_text"
        android:layout_toRightOf="@id/details_task_map_text" />


    <TextView
        android:id="@+id/details_task_type_text"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_task_text"
        android:text="@string/task_type"/>
    <TextView
        android:id="@+id/details_task_type"
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_task_text"
        android:layout_toRightOf="@id/details_task_map_text"/>

    <TextView
        android:id="@+id/details_task_time_text"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_type_text"
        android:text="@string/task_time"/>
    <TextView
        android:id="@+id/details_task_time"
        android:layout_width="100px"
        android:layout_height="50px"
        android:layout_below="@+id/details_task_type_text"
        android:layout_toRightOf="@id/details_task_type_text"/>

    <RelativeLayout
        android:id="@+id/details_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_task_time_text">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_count_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_gb_normal"/>
    </RelativeLayout>





</RelativeLayout>